--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vod-review",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Multi-video YouTube VOD review and sync tool",
   "main": "main.js",
   "author": "Kaden Gibbs",
@@ -16,7 +16,9 @@
     "electron-builder": "^24.13.3"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "fix-webm-duration": "^1.0.6",
+    "ts-ebml": "^3.0.2"
   },
   "build": {
     "appId": "com.vodreview.app",
