--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vod-review",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "Multi-video YouTube VOD review and sync tool",
   "main": "main.js",
   "author": "Kaden Gibbs",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "^5.2.1",
+    "ffmpeg-static": "^5.2.0",
     "fix-webm-duration": "^1.0.6",
     "ts-ebml": "^3.0.2"
   },
@@ -28,6 +29,9 @@
     },
     "files": [
       "**/*"
+    ],
+    "asarUnpack": [
+      "node_modules/ffmpeg-static/**"
     ],
     "win": {
       "target": "nsis",
